# agendaCpp

./: CMakeLists.txt  README.md  style_verification.sh
doc/: ES-II-2.3 Template_def_requisitos - Modelo.doc  README.md
include/: README.md
include/agendacpp/: client.cpp  client.hpp  errors.cpp  errors.hpp  phone.cpp  phone.hpp
src/: agenda.cpp  agenda.hpp  filemanip.cpp  filemanip.hpp  menu.cpp  menu.hpp
tests/: gooTest.cpp  test.cpp
